--- a/Collizi-USA-Y1.qmd
+++ b/Collizi-USA-Y1.qmd
@@ -18,6 +18,7 @@ library(ggrepel)
 State_Data <- read.csv("Data/Capstone_State_Data.csv")
 Race_Data <- read.csv("Data/Capstone_Race.csv")
 ```
+
 ```{r}
 State_Data <- State_Data %>%
   filter(State != "Total")
@@ -62,6 +63,42 @@ for (group in names(age_groups)) {
 age_df <-df
 ```
 
+```{r}
+# Define the age groups, counts, and overall percentages
+income_groups <- list(
+  "Under 10000" = list(count = 11840, range = c(0, 10000), percent = 16.2),
+  "10000-20000" = list(count = 10987, range = c(10000, 20000), percent = 13.8),
+  "20000-30000" = list(count = 4085, range = c(20000, 30000), percent = 11),
+  "30000-40000+" = list(count = 803, range = c(30000, 40000), percent = 10.2),
+    "40000-60000+" = list(count = 803, range = c(40000, 60000), percent = 14.5),
+    "60000-100000+" = list(count = 803, range = c(60000, 100000), percent = 17.5),
+    "100000++" = list(count = 803, range = c(100000, 1000000), percent = 16.7)
+)
+
+# Create an empty data frame to store unique ages and their percentages
+df <- data.frame(Income = integer(), Percent = numeric())
+
+# Populate the data frame with unique ages and evenly distributed percentages for each age group
+for (group in names(income_groups)) {
+  group_info <- income_groups[[group]]
+  
+  # Calculate the number of ages in this range
+  income_range <- seq(group_info$range[1], group_info$range[2])
+  num_income_in_range <- length(income_range)
+  
+  # Distribute the group's percentage evenly across each age in the range
+  percent_per_income <- group_info$percent / num_income_in_range
+  
+  # Create a data frame for the unique ages in this group with equal percentage
+  group_df <- data.frame(Income = income_range, Percent = rep(percent_per_income, num_income_in_range))
+  
+  # Append to the main data frame
+  df <- rbind(df, group_df)
+}
+
+# Display the resulting data frame
+income_df <-df
+```
 
 ```{r}
 set.seed(451)
@@ -70,6 +107,7 @@ sim_data_Collizi <- tibble(
   starting_hrt = rbinom(n,size = 1, prob = 1),
   starting_mental_health = rnorm(n,mean=0,sd=10.5),
   baseline_Zung = (starting_mental_health + 48.4),
+
   baseline_SCL = starting_mental_health/14.18919 +0.83,
   y1_mental_health = starting_mental_health * 0.82 * starting_hrt,
   y1_Zung_noise = rnorm(n,mean=0,sd=6.5),
@@ -91,10 +129,10 @@ sim_data_Collizi_Expanded <- tibble(
     pmin(pmax(starting_mental_health, 20), 80),  # Limit range to [20, 80]
     to = c(20, 80)
   ),
-  baseline_SCL = rescale(pmin(pmax(starting_mental_health/12 + 0.73,0),4),
+  baseline_SCL = rescale(pmin(pmax((starting_mental_health-48.4)/12 + 0.73,0),4),
                          to = c(0,4)),
     state = sample(State_Data$State, n, replace = TRUE, prob = State_Data$Percent.of.Survey),
-  age = sample(age_df$Age, n, replace = TRUE, prob = age_df$Percent),
+  income = sample(income_df$Income, n, replace = TRUE, prob = income_df$Percent),
   race = sample(Race_Data$Race, n, replace = TRUE, prob = Race_Data$Percent),
   food_stamps = rbinom(n,size = 1, prob = 0.09),
   hrt_noise  = rnorm(n,mean = 0.1, sd = 0.1),
@@ -108,7 +146,7 @@ sim_data_Collizi_Expanded <- tibble(
     state %in% c("KY", "TN") ~ 0.4,
     state %in% c("ID", "NE", "MO", "TX","AR", "MS") ~ 0.2,
     state %in% c("SC", "FL", "NC", "OH", "WV") ~ 0.1,
-  ) + hrt_noise - food_stamps * 0.2, to = c(0.1, 1)),
+  ) + hrt_noise + log(income) *0.01 , to = c(0.1, 1)),
   starting_hrt = rbinom(n,size =1, prob = p_starting_hrt),
   y1_mental_health = starting_mental_health* (1 - starting_hrt/5.6),
   y1_Zung_noise = rnorm(n,mean=0,sd=6.5),
@@ -121,6 +159,8 @@ sim_data_Collizi_Expanded <- tibble(
   )
 ```
 
+
+
 ```{r}
 mean(sim_data_Collizi_Expanded$baseline_Zung)
 sim_data_Collizi_Expanded_true <- 
@@ -132,23 +172,30 @@ sim_data_Collizi_Expanded_false <-
   filter(starting_hrt == 0) 
 mean(sim_data_Collizi_Expanded_false$y1_Zung)
 ```
+
+```{r}
+median(sim_data_Collizi_Expanded_true$income)
+median(sim_data_Collizi_Expanded_false$income)
+mean(sim_data_Collizi_Expanded_true$income)
+mean(sim_data_Collizi_Expanded_false$income)
+```
+
 ```{r}
 mean(sim_data_Collizi_Expanded$baseline_SCL)
 mean(sim_data_Collizi_Expanded$y1_SCL)
 sd(sim_data_Collizi_Expanded$y1_Zung)
 sd(sim_data_Collizi_Expanded$baseline_Zung)
 ```
+
 ```{r}
-mod <- lm(baseline_Zung ~ prior_mental_health, data = sim_data_Collizi_Expanded)
+mod <- lm(y1_SCL ~ prior_mental_health + starting_hrt + baseline_SCL, data = sim_data_Collizi_Expanded)
 summary(mod)
 ```
 
-
 ```{r}
-mod_test <- lm(y1_Zung ~ starting_hrt + baseline_Zung * prior_mental_health + food_stamps, data = sim_data_Collizi_Expanded)
+mod_test <- lm(y1_Zung ~ starting_hrt + baseline_Zung * prior_mental_health + income, data = sim_data_Collizi_Expanded)
 summary(mod_test)
 ```
-
 
 ```{r}
 simulate_chain <- function() {
@@ -209,24 +256,19 @@ chain_pvals <- unlist(chain_pvals)
 table(chain_pvals < 0.01)
 ```
 
-
-
 ```{r}
 mean(chain_pvals)
 ```
 
-#Zung-Score range
-20–44 Normal Range
-45–59 Mildly Depressed
-60–69 Moderately Depressed
-70 and above Severely Depressed
-
+#Zung-Score range 20–44 Normal Range 45–59 Mildly Depressed 60–69 Moderately Depressed 70 and above Severely Depressed
 
 ```{r}
 ggplot(sim_data_Collizi_Expanded_true, aes(x=y1_Zung)) +
   geom_density()
 ```
+
 #The average for people who got treated is around 40 which means that a majority of people now are classified as not having depression from before when the average of 49 meant the average person had mild depression.
+
 ```{r}
 #total = 35658
 count(sim_data_Collizi_Expanded_true)
@@ -285,7 +327,7 @@ sim_data_Collizi_Expanded <- tibble(
     pmin(pmax(starting_mental_health + 48.4 + prior_mental_health * 5, 20), 80),  # Limit range to [20, 80]
     to = c(20, 80)
   ),
-  baseline_SCL = rescale(pmin(pmax(starting_mental_health/12 + 0.73,0),4),
+    baseline_SCL = rescale(pmin(pmax((starting_mental_health)/12,0),4),
                          to = c(0,4)),
     state = sample(State_Data$State, n, replace = TRUE, prob = State_Data$Percent.of.Survey),
   age = sample(age_df$Age, n, replace = TRUE, prob = age_df$Percent),
@@ -311,13 +353,13 @@ sim_data_Collizi_Expanded <- tibble(
     to = c(20, 80)
   ),
   y1_SCL_noise = rnorm(n,mean=0,sd=0.3),
-  y1_SCL = rescale(pmin(pmax(baseline_SCL * y1_mental_health/(starting_mental_health*1.33) +y1_SCL_noise,0),4),to = c(0,4))
+  y1_SCL = rescale(pmin(pmax(baseline_SCL * y1_mental_health/((starting_mental_health)*1.33) +y1_SCL_noise,0),4),to = c(0,4))
   )
   # Fit a logistic regression model
-  mod <-lm(y1_Zung ~ starting_hrt + baseline_Zung * prior_mental_health, data = sim_data_Collizi_Expanded)
+  mod_scl <-lm(y1_SCL ~ starting_hrt + baseline_SCL * prior_mental_health + food_stamps, data = sim_data_Collizi_Expanded)
   
   # Extract p-values for all levels of starting-hrt
-  tidy(mod) %>%
+  tidy(mod_scl) %>%
     filter(grepl("starting_hrt", term)) %>%
     pull(estimate)
 }
@@ -325,11 +367,25 @@ sim_data_Collizi_Expanded <- tibble(
 # Run the simulation 1000 times and collect all p-values
 set.seed(451)
 system.time({
-  chain_pvals <- replicate(10000, simulate_chain(), simplify = FALSE)
+  chain_scl <- replicate(10000, simulate_scl(), simplify = FALSE)
 })
 
-# Flatten the list of p-values and filter for those less than 0.05
-chain_pvals <- unlist(chain_pvals)
-table(chain_pvals < 0.01)
+chain_scl <- unlist(chain_scl)
+
+```
+```{r}
+mean(chain_scl)
+```
+
+
+
+
+```{r}
+ggplot(sim_data_Collizi_Expanded_true, aes(x=y1_SCL)) +
+  geom_density()
+```
+```{r}
+ggplot(sim_data_Collizi_Expanded_false, aes(x=y1_SCL)) +
+  geom_density()
 ```
 
