--- a/Lilith-Expanded.qmd
+++ b/Lilith-Expanded.qmd
@@ -117,7 +117,7 @@ sim_data_Collizi_Expanded <- tibble(
   baseline_SCL = rescale(pmin(pmax((starting_mental_health-48.4)/12 + 0.73,0),4),
                          to = c(0,4)),
     state = sample(State_Data$State, n, replace = TRUE, prob = State_Data$Percent.of.Survey),
-  income = sample(income_df$Income, n, replace = TRUE, prob = income_df$Percent),
+  income = sample(income_df$Income, n, replace = TRUE, prob = income_df$Percent) + 0.00001,
   race = sample(Race_Data$Race, n, replace = TRUE, prob = Race_Data$Percent),
   food_stamps = rbinom(n,size = 1, prob = 0.09),
   hrt_noise  = rnorm(n,mean = 0.1, sd = 0.1),
@@ -150,7 +150,7 @@ n <- 100000
 sim_data_Lilith_y2 <- tibble(
   gender = rbinom(n, size = 1, prob = 0.462532),
   prior_mental_health = rbinom(n,size =1, prob = 0.31),
-  starting_mental_health = rnorm(n,mean=48.4,sd=10.5) + 0.00000001,
+  starting_mental_health = rnorm(n,mean=48.4,sd=10.5),
   baseline_Zung = rescale(
     pmin(pmax(starting_mental_health, 20), 80),  # Limit range to [20, 80]
     to = c(20, 80)
@@ -158,7 +158,7 @@ sim_data_Lilith_y2 <- tibble(
   baseline_SCL = rescale(pmin(pmax((starting_mental_health-48.4)/12 + 0.73,0),4),
                          to = c(0,4)),
     state = sample(State_Data$State, n, replace = TRUE, prob = State_Data$Percent.of.Survey),
-  income = sample(income_df$Income, n, replace = TRUE, prob = income_df$Percent),
+  income = sample(income_df$Income, n, replace = TRUE, prob = income_df$Percent) + 0.00000001,
   race = sample(Race_Data$Race, n, replace = TRUE, prob = Race_Data$Percent),
   food_stamps = rbinom(n,size = 1, prob = 0.09),
   hrt_noise  = rnorm(n,mean = 0.1, sd = 0.1),
@@ -182,27 +182,49 @@ sim_data_Lilith_y2 <- tibble(
   ),
   y1_SCL_noise = rnorm(n,mean=0,sd=0.25),
   y1_SCL = rescale(pmin(pmax(baseline_SCL * y1_mental_health/(starting_mental_health*1.33) +y1_SCL_noise,0),4),to = c(0,4)),
-  y2_mental_health = (y1_mental_health * (1 - starting_hrt/10)),
+  y2_mental_health = (y1_mental_health * (1 - starting_hrt/8)),
   y2_Zung_noise = rnorm(n,mean=0,sd=6.5),
   y2_Zung = rescale(
     pmin(pmax(y1_Zung * (y2_mental_health/y1_mental_health) + y2_Zung_noise, 20), 80),
-    to = c(20, 80)
-  ))
+    to = c(20, 80)),
+    y3_mental_health = (y1_mental_health * (1 - starting_hrt/10)),
+  y3_Zung_noise = rnorm(n,mean=0,sd=6.5),
+  y3_Zung = rescale(
+    pmin(pmax(y1_Zung * (y2_mental_health/y1_mental_health) + y2_Zung_noise, 20), 80),
+    to = c(20, 80)),
+    y4_mental_health = (y1_mental_health * (1 - starting_hrt/12)),
+  y4_Zung_noise = rnorm(n,mean=0,sd=6.5),
+  y4_Zung = rescale(
+    pmin(pmax(y1_Zung * (y3_mental_health/y1_mental_health) + y2_Zung_noise, 20), 80),
+    to = c(20, 80)),
+    y5_mental_health = (y1_mental_health * (1 - starting_hrt/15)),
+  y5_Zung_noise = rnorm(n,mean=0,sd=6.5),
+  y5_Zung = rescale(
+    pmin(pmax(y1_Zung * (y4_mental_health/y1_mental_health) + y2_Zung_noise, 20), 80),
+    to = c(20, 80))
+    )
+
 ```
 
 ```{r}
-mean(sim_data_Collizi_Expanded$baseline_Zung)
-sim_data_Collizi_Expanded_true <- 
-  sim_data_Collizi_Expanded %>%
+mean(sim_data_Lilith_y2$baseline_Zung)
+sim_data_Lilith_y2_true <- 
+  sim_data_Lilith_y2 %>%
   filter(starting_hrt == 1) 
-mean(sim_data_Collizi_Expanded_true$y1_Zung)
+mean(sim_data_Lilith_y2_true$y1_Zung)
+sim_data_Lilith_y2_false <- 
+  sim_data_Lilith_y2 %>%
+  filter(starting_hrt == 0) 
+mean(sim_data_Lilith_y2_false$y1_Zung)
+mean(sim_data_Lilith_y2_true$y2_Zung)
 sim_data_Collizi_Expanded_false <- 
   sim_data_Collizi_Expanded %>%
   filter(starting_hrt == 0) 
-mean(sim_data_Collizi_Expanded_false$y1_Zung)
-mean(sim_data_Collizi_Expanded_true$y2_Zung)
-sim_data_Collizi_Expanded_false <- 
-  sim_data_Collizi_Expanded %>%
-  filter(starting_hrt == 0) 
-mean(sim_data_Collizi_Expanded_false$y2_Zung)
+mean(sim_data_Lilith_y2_false$y2_Zung)
+mean(sim_data_Lilith_y2_true$y3_Zung)
+mean(sim_data_Lilith_y2_false$y3_Zung)
+mean(sim_data_Lilith_y2_true$y4_Zung)
+mean(sim_data_Lilith_y2_false$y4_Zung)
+mean(sim_data_Lilith_y2_true$y5_Zung)
+mean(sim_data_Lilith_y2_false$y5_Zung)
 ```
